--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			</ul>
 		</nav>
 		<div>
-			<h1 class="site-title">Vanessa Me Tonini</h1>
-			<h2 class="site-subtitle">web developer</h2>
+			<h1 class="site-title">Isaac Mecchi</h1>
+			<h2 class="site-subtitle">DevOps Engineer</h2>
 		</div>
 	</header>
 	<section>
