--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Isaac Mecchi - DevOps Enineer</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-		<!--
+		<!--	
 		<link rel="stylesheet" href="css/estilos.css">
 		-->
 	</head>
@@ -13,16 +13,24 @@
 	<body>
 
 		<header>
-			<nav class="menu">
-				<ul>
-					<li><a href="#">Sobre</a></li>
-					<li><a href="#">Portfólio</a></li>
-					<li><a href="#">Contato</a></li>
-				</ul>
+
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			  <a class="navbar-brand" href="#">IM</a>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			    <span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+			    <div class="navbar-nav">
+			      <a class="nav-item nav-link active" href="#">Sobre <span class="sr-only">(current)</span></a>
+			      <a class="nav-item nav-link" href="#">Portifólio</a>
+			      <a class="nav-item nav-link" href="#">Contato</a>			      
+			    </div>
+			  </div>
 			</nav>
+
 			<div>
-				<h1 class="site-title">Isaac Mecchi</h1>
-				<h2 class="site-subtitle">DevOps Engineer</h2>
+				<h1 class="">Isaac Mecchi</h1>
+				<h2 class="">DevOps Engineer</h2>
 			</div>
 		</header>
 
@@ -37,24 +45,28 @@
 			<section>
 				<h2>Portfólio</h2>
 				<figure>
-					<img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
+					<img class="" src="./img/" alt="eCommerce">
 					<figcaption>eCommerce</figcaption>
 				</figure>
 				<figure>
-					<img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
+					<img class="" src="./img/" alt=">Mobile">
 					<figcaption>Mobile</figcaption>
 				</figure>
 				<figure>
-					<img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
+					<img class="" src="./img/" alt="Web design">
 					<figcaption>Web design</figcaption>
 				</figure>
 				<figure>
-					<img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
+					<img class="" src="./img/" alt="Projetos pessoais">
 					<figcaption>Projetos pessoais</figcaption>
 				</figure>
 			</section>
 
 		</main>
+
+		<footer>
+			<p>Isaac Mecchi &copy</p>
+		</footer>	
 
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
