--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<header>
 
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 			  <a class="navbar-brand" href="#">IM</a>
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
@@ -30,8 +30,48 @@
 
 			<div>
 				<h1 class="">Isaac Mecchi</h1>
-				<h2 class="">DevOps Engineer</h2>
+				<h2 class="">DevOps Engineer</h2>				
 			</div>
+
+			<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+			  <ol class="carousel-indicators">
+			    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+			    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+			    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+			  </ol>
+			  <div class="carousel-inner">
+			    <div class="carousel-item active">
+			      <img src="https://live.staticflickr.com/5677/21288998731_e1f09c5e51_b.jpg" class="d-block w-100" alt=" "Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
+			      <div class="carousel-caption d-none d-md-block">
+			        <h5>Redes de Computadores</h5>
+			        <p>Especialista em Redes de Computadores pelo Instituto de Computação/Unicamp.</p>
+			      </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img src="https://live.staticflickr.com/5523/11407118963_e0e0870846_b.jpg" class="d-block w-100" alt=""Cloud Computing - Abstract 2" by perspec_photo88 is licensed under CC BY-SA 2.0 ">
+			      <div class="carousel-caption d-none d-md-block">
+			        <h5>Engenharia de Software</h5>
+			        <p>Especialista em Engenharia de software pelo Instituto de Comptação/Unicamp.</p>
+			      </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img src="https://live.staticflickr.com/2202/2050489689_f986cb33f3_m.jpg" class="d-block w-100" alt=" "Python Eggs" by MrTopf is licensed under CC BY-NC 2.0 ">
+			      <div class="carousel-caption d-none d-md-block">
+			        <h5>Consultor em Técnologia da Computação</h5>
+			        <p>Consultoria em diversas áreas da Técnologia da Computação.</p>
+			      </div>
+			    </div>
+			  </div>
+			  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
+			</div>
+
 		</header>
 
 		<main>
