--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Isaac Mecchi - DevOps Enineer</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-		<!--	
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">	
 		<link rel="stylesheet" href="css/estilos.css">
-		-->
 	</head>
 
 	<body>
@@ -41,21 +39,21 @@
 			  </ol>
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
-			      <img src="https://live.staticflickr.com/5677/21288998731_e1f09c5e51_b.jpg" class="d-block w-100" alt=" "Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
+			      <img src="https://live.staticflickr.com/5677/21288998731_e1f09c5e51_b.jpg" class="d-block w-100 imagen-carrousel" alt=""Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
 			      <div class="carousel-caption d-none d-md-block">
 			        <h5>Redes de Computadores</h5>
 			        <p>Especialista em Redes de Computadores pelo Instituto de Computação/Unicamp.</p>
 			      </div>
 			    </div>
 			    <div class="carousel-item">
-			      <img src="https://live.staticflickr.com/5523/11407118963_e0e0870846_b.jpg" class="d-block w-100" alt=""Cloud Computing - Abstract 2" by perspec_photo88 is licensed under CC BY-SA 2.0 ">
+			      <img src="https://live.staticflickr.com/5523/11407118963_e0e0870846_b.jpg" class="d-block w-100 imagen-carrousel" alt=""Cloud Computing - Abstract 2" by perspec_photo88 is licensed under CC BY-SA 2.0 ">
 			      <div class="carousel-caption d-none d-md-block">
 			        <h5>Engenharia de Software</h5>
 			        <p>Especialista em Engenharia de software pelo Instituto de Comptação/Unicamp.</p>
 			      </div>
 			    </div>
 			    <div class="carousel-item">
-			      <img src="https://live.staticflickr.com/2202/2050489689_f986cb33f3_m.jpg" class="d-block w-100" alt=" "Python Eggs" by MrTopf is licensed under CC BY-NC 2.0 ">
+			      <img src="https://live.staticflickr.com/2202/2050489689_f986cb33f3_m.jpg" class="d-block w-100 imagen-carrousel" alt=" "Python Eggs" by MrTopf is licensed under CC BY-NC 2.0 ">
 			      <div class="carousel-caption d-none d-md-block">
 			        <h5>Consultor em Técnologia da Computação</h5>
 			        <p>Consultoria em diversas áreas da Técnologia da Computação.</p>
@@ -76,28 +74,10 @@
 
 		<main>
 
-			<article>
-
-
-
-			</article>	
-
 			<section>
 				<h2>Portfólio</h2>
 				<figure>
-					<img class="" src="./img/" alt="eCommerce">
-					<figcaption>eCommerce</figcaption>
-				</figure>
-				<figure>
-					<img class="" src="./img/" alt=">Mobile">
-					<figcaption>Mobile</figcaption>
-				</figure>
-				<figure>
-					<img class="" src="./img/" alt="Web design">
-					<figcaption>Web design</figcaption>
-				</figure>
-				<figure>
-					<img class="" src="./img/" alt="Projetos pessoais">
+					<img class="" src="https://live.staticflickr.com/5677/21288998731_e1f09c5e51_b.jpg" alt="Projetos pessoais" desc=""Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
 					<figcaption>Projetos pessoais</figcaption>
 				</figure>
 			</section>
