--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Isaac Mecchi - DevOps Enineer</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">	
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/estilos.css">
 	</head>
 
@@ -31,32 +32,32 @@
 				<h2 class="">DevOps Engineer</h2>				
 			</div>
 
-			<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+			<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="5000">
 			  <ol class="carousel-indicators">
 			    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
 			    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
 			    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
 			  </ol>
 			  <div class="carousel-inner">
-			    <div class="carousel-item active">
+			  	<div class="carousel-item active">
+			      <img src="https://live.staticflickr.com/2202/2050489689_f986cb33f3_m.jpg" class="d-block w-100 imagen-carrousel" alt=" "Python Eggs" by MrTopf is licensed under CC BY-NC 2.0 ">
+			      <div class="carousel-caption d-none d-md-block h-50">
+			        <h3 class="fonte-titulo display-4">Consultor em Técnologia da Computação</h5>
+			        <p>Consultoria em diversas áreas da Técnologia da Computação.</p>
+			      </div>
+			    </div>
+			    <div class="carousel-item">
 			      <img src="https://live.staticflickr.com/5677/21288998731_e1f09c5e51_b.jpg" class="d-block w-100 imagen-carrousel" alt=""Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
-			      <div class="carousel-caption d-none d-md-block">
-			        <h5>Redes de Computadores</h5>
+			      <div class="carousel-caption d-none d-md-block h-50">
+			        <h3 class="fonte-titulo display-4">Redes de Computadores</h5>
 			        <p>Especialista em Redes de Computadores pelo Instituto de Computação/Unicamp.</p>
 			      </div>
 			    </div>
 			    <div class="carousel-item">
 			      <img src="https://live.staticflickr.com/5523/11407118963_e0e0870846_b.jpg" class="d-block w-100 imagen-carrousel" alt=""Cloud Computing - Abstract 2" by perspec_photo88 is licensed under CC BY-SA 2.0 ">
-			      <div class="carousel-caption d-none d-md-block">
-			        <h5>Engenharia de Software</h5>
-			        <p>Especialista em Engenharia de software pelo Instituto de Comptação/Unicamp.</p>
-			      </div>
-			    </div>
-			    <div class="carousel-item">
-			      <img src="https://live.staticflickr.com/2202/2050489689_f986cb33f3_m.jpg" class="d-block w-100 imagen-carrousel" alt=" "Python Eggs" by MrTopf is licensed under CC BY-NC 2.0 ">
-			      <div class="carousel-caption d-none d-md-block">
-			        <h5>Consultor em Técnologia da Computação</h5>
-			        <p>Consultoria em diversas áreas da Técnologia da Computação.</p>
+			      <div class="carousel-caption d-none d-md-block h-50">
+			        <h3 class="fonte-titulo display-4">Engenharia de Software</h5>
+			        <p>Especialista em Engenharia de software pelo Instituto de Computação/Unicamp.</p>
 			      </div>
 			    </div>
 			  </div>
