--- a/index.html
+++ b/index.html
@@ -27,10 +27,6 @@
 			  </div>
 			</nav>
 
-			<div>
-				<h1 class="">Isaac Mecchi</h1>
-				<h2 class="">DevOps Engineer</h2>				
-			</div>
 
 			<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="5000">
 			  <ol class="carousel-indicators">
@@ -71,6 +67,11 @@
 			  </a>
 			</div>
 
+			<div>
+				<h1 class="text-center">Isaac Mecchi</h1>
+				<p class="text-center">DevOps Engineer, Computer Network e Software Engineer Specialist </p>				
+			</div>
+
 		</header>
 
 		<main>
@@ -78,7 +79,7 @@
 			<section>
 				<h2>Portfólio</h2>
 				<figure>
-					<img class="" src="https://live.staticflickr.com/5677/21288998731_e1f09c5e51_b.jpg" alt="Projetos pessoais" desc=""Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
+					<img class="imagen-portifolio" src="https://live.staticflickr.com/5677/21288998731_e1f09c5e51_b.jpg" alt="Projetos pessoais" desc=""Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
 					<figcaption>Projetos pessoais</figcaption>
 				</figure>
 			</section>
