--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Isaac Mecchi - DevOps Enineer</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/estilos.css">
 	</head>
 
@@ -68,8 +68,8 @@
 			</div>
 
 			<div>
-				<h1 class="text-center">Isaac Mecchi</h1>
-				<p class="text-center">DevOps Engineer, Computer Network e Software Engineer Specialist </p>				
+				<h1 class="text-center fonte-titulo cor-especial">Isaac Mecchi</h1>
+				<p class="text-center text-secondary">DevOps Engineer, Computer Network e Software Engineer Specialist </p>				
 			</div>
 
 		</header>
@@ -77,7 +77,7 @@
 		<main>
 
 			<section>
-				<h2>Portfólio</h2>
+				<h2 class="fonte-titulo">Portfólio</h2>
 				<figure>
 					<img class="imagen-portifolio" src="https://live.staticflickr.com/5677/21288998731_e1f09c5e51_b.jpg" alt="Projetos pessoais" desc=""Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
 					<figcaption>Projetos pessoais</figcaption>
