--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			</div>
 
 			<div>
-				<h1 class="text-center fonte-titulo cor-especial">Isaac Mecchi</h1>
+				<h1 class="text-center text-primary fonte-titulo">Isaac Mecchi</h1>
 				<p class="text-center text-secondary">DevOps Engineer, Computer Network e Software Engineer Specialist </p>				
 			</div>
 
