--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="css/estilos.css">
 	</head>
 
-	<body>
+	<body class="bg-dark">
 
 		<header>
 
@@ -68,8 +68,8 @@
 			</div>
 
 			<div>
-				<h1 class="text-center text-primary fonte-titulo">Isaac Mecchi</h1>
-				<p class="text-center text-secondary">DevOps Engineer, Computer Network e Software Engineer Specialist </p>				
+				<h1 class="text-center text-primary fonte-titulo pt-5">Isaac Mecchi</h1>
+				<p class="text-center text-light pt-5">DevOps 	Engineer, Computer Network e Software Engineer Specialist </p>				
 			</div>
 
 		</header>
@@ -77,17 +77,17 @@
 		<main>
 
 			<section>
-				<h2 class="fonte-titulo">Portfólio</h2>
+				<h2 class="fonte-titulo text-light">Portfólio</h2>
 				<figure>
 					<img class="imagen-portifolio" src="https://live.staticflickr.com/5677/21288998731_e1f09c5e51_b.jpg" alt="Projetos pessoais" desc=""Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
-					<figcaption>Projetos pessoais</figcaption>
+					<figcaption class="text-light">Projetos pessoais</figcaption>
 				</figure>
 			</section>
 
 		</main>
 
 		<footer>
-			<p>Isaac Mecchi &copy</p>
+			<p class="text-secondary">Isaac Mecchi &copy</p>
 		</footer>	
 
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
