--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<section>
 				<h2 class="fonte-titulo text-light">Portfólio</h2>
 				<figure>
-					<img class="imagen-portifolio" src="https://live.staticflickr.com/5677/21288998731_e1f09c5e51_b.jpg" alt="Projetos pessoais" desc=""Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
+					<img class="imagen-portifolio" src="" alt="Projetos pessoais" desc=""Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
 					<figcaption class="text-light">Projetos pessoais</figcaption>
 				</figure>
 			</section>
