--- a/index.html
+++ b/index.html
@@ -19,64 +19,65 @@
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
 			  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-			    <div class="navbar-nav">
-			      <a class="nav-item nav-link active" href="#">Sobre <span class="sr-only">(current)</span></a>
-			      <a class="nav-item nav-link" href="#">Portifólio</a>
-			      <a class="nav-item nav-link" href="#">Contato</a>			      
-			    </div>
+			    <ul class="navbar-nav">
+			      <li><a class="nav-item nav-link active" href="#">Sobre <span class="sr-only">(current)</span></a></li>
+			      <li><a class="nav-item nav-link" href="#">Portifólio</a></li>
+			      <li><a class="nav-item nav-link" href="#">Contato</a></li>      
+			    </ul>
 			  </div>
 			</nav>
-
-
-			<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="5000">
-			  <ol class="carousel-indicators">
-			    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-			    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-			    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-			  </ol>
-			  <div class="carousel-inner">
-			  	<div class="carousel-item active">
-			      <img src="https://live.staticflickr.com/2202/2050489689_f986cb33f3_m.jpg" class="d-block w-100 imagen-carrousel" alt=" "Python Eggs" by MrTopf is licensed under CC BY-NC 2.0 ">
-			      <div class="carousel-caption d-none d-md-block h-50">
-			        <h3 class="fonte-titulo display-4">Consultor em Técnologia da Computação</h5>
-			        <p>Consultoria em diversas áreas da Técnologia da Computação.</p>
-			      </div>
-			    </div>
-			    <div class="carousel-item">
-			      <img src="https://live.staticflickr.com/5677/21288998731_e1f09c5e51_b.jpg" class="d-block w-100 imagen-carrousel" alt=""Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
-			      <div class="carousel-caption d-none d-md-block h-50">
-			        <h3 class="fonte-titulo display-4">Redes de Computadores</h5>
-			        <p>Especialista em Redes de Computadores pelo Instituto de Computação/Unicamp.</p>
-			      </div>
-			    </div>
-			    <div class="carousel-item">
-			      <img src="https://live.staticflickr.com/5523/11407118963_e0e0870846_b.jpg" class="d-block w-100 imagen-carrousel" alt=""Cloud Computing - Abstract 2" by perspec_photo88 is licensed under CC BY-SA 2.0 ">
-			      <div class="carousel-caption d-none d-md-block h-50">
-			        <h3 class="fonte-titulo display-4">Engenharia de Software</h5>
-			        <p>Especialista em Engenharia de software pelo Instituto de Computação/Unicamp.</p>
-			      </div>
-			    </div>
-			  </div>
-			  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			    <span class="sr-only">Previous</span>
-			  </a>
-			  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			    <span class="sr-only">Next</span>
-			  </a>
-			</div>
-
-			<div>
-				<h1 class="text-center text-primary fonte-titulo pt-5">Isaac Mecchi</h1>
-				<p class="text-center text-light pt-5">DevOps 	Engineer, Computer Network e Software Engineer Specialist </p>				
-			</div>
 
 		</header>
 
 		<main>
 
-			<section>
+			<section class="carousel">
+				<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="5000">
+				  <ol class="carousel-indicators">
+				    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+				    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+				    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+				  </ol>
+				  <div class="carousel-inner">
+				  	<div class="carousel-item active">
+				      <img src="https://live.staticflickr.com/2202/2050489689_f986cb33f3_m.jpg" class="d-block w-100 imagen-carrousel" alt=" "Python Eggs" by MrTopf is licensed under CC BY-NC 2.0 ">
+				      <div class="carousel-caption d-none d-md-block h-50">
+				        <h3 class="fonte-titulo display-4">Consultor em Técnologia da Computação</h5>
+				        <p>Consultoria em diversas áreas da Técnologia da Computação.</p>
+				      </div>
+				    </div>
+				    <div class="carousel-item">
+				      <img src="https://live.staticflickr.com/5677/21288998731_e1f09c5e51_b.jpg" class="d-block w-100 imagen-carrousel" alt=""Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
+				      <div class="carousel-caption d-none d-md-block h-50">
+				        <h3 class="fonte-titulo display-4">Redes de Computadores</h5>
+				        <p>Especialista em Redes de Computadores pelo Instituto de Computação/Unicamp.</p>
+				      </div>
+				    </div>
+				    <div class="carousel-item">
+				      <img src="https://live.staticflickr.com/5523/11407118963_e0e0870846_b.jpg" class="d-block w-100 imagen-carrousel" alt=""Cloud Computing - Abstract 2" by perspec_photo88 is licensed under CC BY-SA 2.0 ">
+				      <div class="carousel-caption d-none d-md-block h-50">
+				        <h3 class="fonte-titulo display-4">Engenharia de Software</h5>
+				        <p>Especialista em Engenharia de software pelo Instituto de Computação/Unicamp.</p>
+				      </div>
+				    </div>
+				  </div>
+				  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				    <span class="sr-only">Previous</span>
+				  </a>
+				  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+				    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+				    <span class="sr-only">Next</span>
+				  </a>
+				</div>
+			</section>
+
+			<section id="titulo">
+				<h1 class="text-center text-primary fonte-titulo pt-5">Isaac Mecchi</h1>
+				<p class="text-center text-light pt-5">DevOps 	Engineer, Computer Network e Software Engineer Specialist </p>				
+			</section>
+
+			<section id="portifolio">
 				<h2 class="fonte-titulo text-light">Portfólio</h2>
 				<figure>
 					<img class="imagen-portifolio" src="" alt="Projetos pessoais" desc=""Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
