--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<header>
 
 			<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-			  <a class="navbar-brand" href="#">IM</a>
+			  <a class="navbar-brand" href="https://mecsys.github.io">IM</a>
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
