--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 			  </button>
 			  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
 			    <ul class="navbar-nav">
-			      <li><a class="nav-item nav-link active" href="#">Sobre <span class="sr-only">(current)</span></a></li>
-			      <li><a class="nav-item nav-link" href="#">Portifólio</a></li>
-			      <li><a class="nav-item nav-link" href="#">Contato</a></li>      
+			      <li><a class="nav-item nav-link active" href="https://mecsys.github.io/sobre">Sobre <span class="sr-only">(current)</span></a></li>
+			      <li><a class="nav-item nav-link" href="https://mecsys.github.io/portifolio">Portifólio</a></li>
+			      <li><a class="nav-item nav-link" href="https://mecsys.github.io">Contato</a></li>
 			    </ul>
 			  </div>
 			</nav>
