--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 			</section>
 
 			<section id="titulo">
-				<h1 class="text-center text-primary fonte-titulo pt-5">Isaac Mecchi</h1>
+				<h1 class="text-center text-light fonte-titulo pt-5">Isaac Mecchi</h1>
 				<p class="text-center text-light pt-5">DevOps 	Engineer, Computer Network e Software Engineer Specialist </p>				
 			</section>
 
 		</main>
 
 		<footer>
-			<p class="text-secondary">Isaac Mecchi &copy</p>
+			<p class="text-secondary text-center">Isaac Mecchi &copy</p>
 		</footer>	
 
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
