--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				    </div>
 				    <div class="carousel-item">
 				      <img src="https://live.staticflickr.com/5677/21288998731_e1f09c5e51_b.jpg" class="d-block w-100 imagen-carrousel" alt=""Switch and network cables" by Christiaan Colen is licensed under CC BY-SA 2.0">
-				      <div class="carousel-caption d-none d-md-block h-50">
+				      <div class="carousel-caption d-none d-md-block h-50 descricao_carrousel">
 				        <h3 class="fonte-titulo display-4">Redes de Computadores</h5>
 				        <p>Especialista em Redes de Computadores pelo Instituto de Computação/Unicamp.</p>
 				      </div>
@@ -74,7 +74,7 @@
 
 			<section id="titulo">
 				<h1 class="text-center text-light fonte-titulo pt-5">Isaac Mecchi</h1>
-				<p class="text-center text-light pt-5">DevOps 	Engineer, Computer Network e Software Engineer Specialist </p>				
+				<p class="text-center text-light pt-5">DevOps 	Engineer, Computer Network and Software Engineer Specialist </p>				
 			</section>
 
 		</main>
