--- a/sobre.html
+++ b/sobre.html
@@ -32,7 +32,7 @@
 		<main>
 
 			<section id="titulo">
-				<h1 class="text-center text-light fonte-titulo pt-5">Isaac Mecchi</h1>
+				<h1 class="text-center text-light fonte-titulo mt-5 pt-5">Isaac Mecchi</h1>
 				<p class="text-center text-light pt-5">DevOps 	Engineer, Computer Network e Software Engineer Specialist </p>				
 			</section>
 
