--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				  <div class="carousel-inner">
 				  	<div class="carousel-item active">
 				      <img src="https://live.staticflickr.com/2202/2050489689_f986cb33f3_m.jpg" class="d-block w-100 imagen-carrousel" alt=" "Python Eggs" by MrTopf is licensed under CC BY-NC 2.0 ">
-				      <div class="carousel-caption d-none d-md-block h-50">
+				      <div class="carousel-caption d-none d-md-block h-50 descricao_carrousel">
 				        <h3 class="fonte-titulo display-4">Consultor em Técnologia da Computação</h5>
 				        <p>Consultoria em diversas áreas da Técnologia da Computação.</p>
 				      </div>
@@ -55,7 +55,7 @@
 				    </div>
 				    <div class="carousel-item">
 				      <img src="https://live.staticflickr.com/5523/11407118963_e0e0870846_b.jpg" class="d-block w-100 imagen-carrousel" alt=""Cloud Computing - Abstract 2" by perspec_photo88 is licensed under CC BY-SA 2.0 ">
-				      <div class="carousel-caption d-none d-md-block h-50">
+				      <div class="carousel-caption d-none d-md-block h-50 descricao_carrousel">
 				        <h3 class="fonte-titulo display-4">Engenharia de Software</h5>
 				        <p>Especialista em Engenharia de software pelo Instituto de Computação/Unicamp.</p>
 				      </div>
