--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			  </button>
 			  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
 			    <ul class="navbar-nav">
-			      <li><a class="nav-item nav-link active" href="https://mecsys.github.io/sobre.html">Sobre <span class="sr-only">(current)</span></a></li>
-			      <li><a class="nav-item nav-link" href="https://mecsys.github.io/portifolio.html">Portifólio</a></li>
+			      <li><a class="nav-item nav-link active" href="#sobre">Sobre <span class="sr-only">(current)</span></a></li>
+			      <li><a class="nav-item nav-link" href="#portifolio">Portifólio</a></li>
 			      <li><a class="nav-item nav-link" data-toggle="modal" data-target="#modal-contato" href="#">Contato</a></li>
 			    </ul>
 			  </div>
