--- a/index.html
+++ b/index.html
@@ -106,7 +106,16 @@
 		        </button>
 		      </div>
 		      <div class="modal-body">
-		        Entre em contato!
+		        <form>
+				  <div class="form-group">
+				    <label for="exampleFormControlInput1">Email address</label>
+				    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+				  </div>
+				  <div class="form-group">
+				    <label for="exampleFormControlTextarea1">Mensagem</label>
+				    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+				  </div>
+				</form>
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
