--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
 
 		</main>
 
+		<footer class="bg-dark p-3">
+			<p class="text-secondary text-secondary text-center m-0">Isaac Mecchi &lt;isaacmecchi at gmail dot com&gt; &copy;</p>
+		</footer>	
+
 		<!-- Modal -->
 		<div class="modal fade" id="modal-contato" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		  <div class="modal-dialog" role="document">
@@ -128,10 +132,6 @@
 		    </dialog>
 		  </div>
 		</div>
-
-		<footer>
-			<p class="text-secondary text-center">Isaac Mecchi &copy</p>
-		</footer>	
 
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
