--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<header>
 
-			<nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 			  <a class="navbar-brand text-light fonte-titulo" href="https://mecsys.github.io">IM</a>
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
