--- a/index.html
+++ b/index.html
@@ -78,18 +78,18 @@
 			</section>
 
 			<section id="sobre">
-				<h2 class="fonte-titulo text-light">Sobre</h2>
+				<h2 class="text-center fonte-titulo text-light">Sobre</h2>
 				<figure>
 					<img class="imagen-sobre" src="..." alt="...">
-					<figcaption class="text-light">Informações pessoais</figcaption>
+					<figcaption class="text-center text-light">Informações pessoais</figcaption>
 				</figure>
 			</section>
 
 			<section id="portifolio">
-				<h2 class="fonte-titulo text-light">Portfólio</h2>
+				<h2 class="text-center fonte-titulo text-light">Portfólio</h2>
 				<figure>
 					<img class="imagen-portifolio" src="..." alt="...">
-					<figcaption class="text-light">Projetos pessoais</figcaption>
+					<figcaption class="text-center text-light">Projetos pessoais</figcaption>
 				</figure>
 			</section>
 
