--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Isaac Mecchi - DevOps Enineer</title>
+		<title>Isaac Mecchi - DevOps Engineer</title>
 		<link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/estilos.css">
@@ -79,10 +79,26 @@
 
 			<section id="sobre">
 				<h2 class="text-center fonte-titulo text-light">Sobre</h2>
-				<figure>
+				<figure class="mb-5">
 					<img class="imagen-sobre" src="..." alt="...">
 					<figcaption class="text-center text-light">Informações pessoais</figcaption>
 				</figure>
+
+				<div class="d-flex flex-column mb-5">
+					<p class="text-center fonte-titulo text-light">Minha página no Instituto de Computação/Unicamp</p>
+					<a class="btn btn-secondary m-auto p-auto" href="https://ic.unicamp.br/~isaac">IC/Unicamp</a>
+				</div>
+
+				<div class="d-flex flex-column mb-5">
+					<p class="text-center fonte-titulo text-light">Meu linkedin</p>
+					<a class="btn btn-secondary m-auto p-auto" href="https://www.linkedin.com/in/isaacmecchi">Linkedin</a>
+				</div>
+
+				<div class="d-flex flex-column mb-5">
+					<p class="text-center fonte-titulo text-light">Meu github</p>
+					<a class="btn btn-secondary m-auto p-auto" href="https://github.com/mecsys">GitHub</a>
+				</div>				
+
 			</section>
 
 			<section id="portifolio">
