--- a/index.html
+++ b/index.html
@@ -77,26 +77,30 @@
 				<p class="text-center text-light pt-5">DevOps 	Engineer, Computer Network and Software Engineer Specialist </p>				
 			</section>
 
-			<section id="sobre">
+			<section id="sobre" class="mt-5">
 				<h2 class="text-center fonte-titulo text-light">Sobre</h2>
 				<figure class="mb-5">
 					<img class="imagen-sobre" src="..." alt="...">
 					<figcaption class="text-center text-light">Informações pessoais</figcaption>
 				</figure>
 
+
 				<div class="d-flex flex-column mb-5">
-					<p class="text-center fonte-titulo text-light">Minha página no Instituto de Computação/Unicamp</p>
-					<a class="btn btn-secondary m-auto p-auto" href="https://ic.unicamp.br/~isaac">IC/Unicamp</a>
+					<p class="text-center fonte-titulo text-light">
+						Desde 2012 atuando como Administrador de Sistemas e Analista de Suporte no Instituto de Computação/Unicamp.
+					</p>
+					<p class="text-center fonte-titulo text-light mt-3">Meu página no Instituto de Computação/Unicamp</p>
+					<a class="btn btn-primary m-auto p-auto" href="https://ic.unicamp.br/~isaac">IC/Unicamp</a>
 				</div>
 
 				<div class="d-flex flex-column mb-5">
 					<p class="text-center fonte-titulo text-light">Meu linkedin</p>
-					<a class="btn btn-secondary m-auto p-auto" href="https://www.linkedin.com/in/isaacmecchi">Linkedin</a>
+					<a class="btn btn-primary m-auto p-auto" href="https://www.linkedin.com/in/isaacmecchi">Linkedin</a>
 				</div>
 
 				<div class="d-flex flex-column mb-5">
 					<p class="text-center fonte-titulo text-light">Meu github</p>
-					<a class="btn btn-secondary m-auto p-auto" href="https://github.com/mecsys">GitHub</a>
+					<a class="btn btn-primary m-auto p-auto" href="https://github.com/mecsys">GitHub</a>
 				</div>				
 
 			</section>
