--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 					<p class="text-center fonte-titulo text-light">
 						Desde 2012 atuando como Administrador de Sistemas e Analista de Suporte no Instituto de Computação/Unicamp.
 					</p>
-					<p class="text-center fonte-titulo text-light mt-3">Meu página no Instituto de Computação/Unicamp</p>
+					<p class="text-center fonte-titulo text-light mt-3">
+						Minha página no Instituto de Computação/Unicamp
+					</p>
 					<a class="btn btn-primary m-auto p-auto" href="https://ic.unicamp.br/~isaac">IC/Unicamp</a>
 				</div>
 
@@ -101,6 +103,11 @@
 				<div class="d-flex flex-column mb-5">
 					<p class="text-center fonte-titulo text-light">Meu github</p>
 					<a class="btn btn-primary m-auto p-auto" href="https://github.com/mecsys">GitHub</a>
+				</div>
+
+				<div class="d-flex flex-column mb-5">
+					<p class="text-center fonte-titulo text-light">Meu gitlab</p>
+					<a class="btn btn-primary m-auto p-auto" href="https://gitlab.com/mecsys">GitLab</a>
 				</div>				
 
 			</section>
