--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
 				</div>
 
 				<div class="d-flex flex-column mb-5">
+					<p class="text-center fonte-titulo text-light">Meu curriculo lattes</p>
+					<a class="btn btn-primary m-auto p-auto" href="https://lattes.cnpq.br">Lattes</a>
+				</div>
+
+				<div class="d-flex flex-column mb-5">
 					<p class="text-center fonte-titulo text-light">Meu linkedin</p>
 					<a class="btn btn-primary m-auto p-auto" href="https://www.linkedin.com/in/isaacmecchi">Linkedin</a>
 				</div>
